overflow fix

--- a/src/style/pages/_confirm.scss
+++ b/src/style/pages/_confirm.scss
@@ -212,7 +212,7 @@
 
                 span {
                     font-size: 16px;
-                    overflow-x: ;
+                    overflow-x:hidden;
                 }
 
                 img {
